week 2 second point added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -221,6 +221,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['google']\n"
+     ]
+    }
+   ],
+   "source": [
+    "url=input(\"Enter the url of the website: \")\n",
+    "name = re.findall('www\\.(.*?)\\.', url)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "other\n"
+     ]
+    }
+   ],
+   "source": [
+    "if name == ['science']:\n",
+    "    print(\"science\")\n",
+    "elif name == ['wiley']:\n",
+    "    print(\"wiley\")\n",
+    "elif name == ['nature']:\n",
+    "    print(\"nature\")\n",
+    "elif name == ['sciencedirect']:\n",
+    "    print(\"sciencedirect\")\n",
+    "elif name == ['springer']:\n",
+    "    print(\"springer\")\n",
+    "elif name == ['elsevier']:\n",
+    "    print(\"elsevier\")\n",
+    "elif name == ['mdpi']:\n",
+    "    print(\"mdpi\")\n",
+    "else:\n",
+    "    print(\"other\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
