--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "#finding out the number of times the research paper number 5 is mentioned in the text.\n",
     "soup_new = BeautifulSoup(html,'lxml')  #creating an instance of the BeautifulSoup library\n",
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +128,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=9&publication_year=2015&pages=9451-9469&author=H.+Zhang&title=Ultrathin+Two-Dimensional+Nanomaterials&doi=10.1021%2Facsnano.5b05040\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=10&publication_year=2016&pages=8121-8123&author=A.+T.+S.+Weeauthor=M.+C.+Hersamauthor=M.+Chhowallaauthor=Y.+Gogotsi&title=An+Update+from+Flatland&doi=10.1021%2Facsnano.6b06087\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=2&publication_year=2017&pages=16098&author=B.+Anasoriauthor=M.+R.+Lukatskayaauthor=Y.+Gogotsi&title=2D+Metal+Carbides+and+Nitrides+%28MXenes%29+for+Energy+Storage&doi=10.1038%2Fnatrevmats.2016.98\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=97&publication_year=2019&pages=24-25&author=B.+C.+Seijo&title=2019%3A+The+Year+the+Periodic+Table+Gets+Its+Due&doi=10.1021%2Fcen-09701-feature8\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&publication_year=2019&author=B.+Anasori&author=Y.+Gogotsi&title=2D+Metal+Carbides+and+Nitrides+%28MXenes%29%2C+Structure%2C+Properties+and+Applications\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=23&publication_year=2011&pages=4248-4253&author=M.+Naguibauthor=M.+Kurtogluauthor=V.+Presserauthor=J.+Luauthor=J.+Niuauthor=M.+Heonauthor=L.+Hultmanauthor=Y.+Gogotsiauthor=M.+W.+Barsoum&title=Two-Dimensional+Nanocrystals+Produced+by+Exfoliation+of+Ti3AlC2&doi=10.1002%2Fadma.201102306\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=9&publication_year=2015&pages=9507-9516&author=B.+Anasoriauthor=Y.+Xieauthor=M.+Beidaghiauthor=J.+Luauthor=B.+C.+Hoslerauthor=L.+Hultmanauthor=P.+R.+C.+Kentauthor=Y.+Gogotsiauthor=M.+W.+Barsoum&title=Two-Dimensional%2C+Ordered%2C+Double+Transition+Metals+Carbides+%28MXenes%29&doi=10.1021%2Facsnano.5b03591\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=31&publication_year=2019&pages=2476-2485&author=Q.+Taoauthor=J.+Luauthor=M.+Dahlqvistauthor=A.+Mockuteauthor=S.+Calderauthor=A.+Petruhinsauthor=R.+Meshkianauthor=O.+Rivinauthor=D.+Potashnikovauthor=E.+a.+N.+Caspiauthor=H.+Shakedauthor=A.+Hoserauthor=C.+Opagisteauthor=R.-M.+Galeraauthor=R.+Salikhovauthor=U.+Wiedwaldauthor=C.+Ritterauthor=A.+R.+Wildesauthor=B.+Johanssonauthor=L.+Hultmanauthor=M.+Farleauthor=M.+W.+Barsoumauthor=J.+Rosen&title=Atomically+Layered+and+Ordered+Rare-Earth+i-MAX+Phases%3A+A+New+Class+of+Magnetic+Quaternary+Compounds&doi=10.1021%2Facs.chemmater.8b05298\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=7&publication_year=2019&pages=446-452&author=A.+Petruhinsauthor=J.+Luauthor=L.+Hultmanauthor=J.+Rosen&title=Synthesis+of+Atomically+Layered+and+Chemically+Ordered+Rare-Earth+%28RE%29+i-MAX+Phases%3B+%28Mo2%2F3RE1%2F3%292GaC+with+RE%3D+Gd%2C+Tb%2C+Dy%2C+Ho%2C+Er%2C+Tm%2C+Yb%2C+and+Lu&doi=10.1080%2F21663831.2019.1644684\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=3&publication_year=2017&author=M.+Dahlqvistauthor=J.+Luauthor=R.+Meshkianauthor=Q.+Taoauthor=L.+Hultmanauthor=J.+Rosen&title=Prediction+and+Synthesis+of+a+Family+of+Atomic+Laminate+Phases+with+Kagom%C3%A9-Like+and+In-Plane+Chemical+Ordering&doi=10.1126%2Fsciadv.1700642\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=94&publication_year=2016&pages=054116&author=M.+Ashtonauthor=R.+G.+Hennigauthor=S.+R.+Broderickauthor=K.+Rajanauthor=S.+B.+Sinnott&title=Computational+Discovery+of+Stable+M2AX+Phases&doi=10.1103%2FPhysRevB.94.054116\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=12&publication_year=2018&pages=7761-7770&author=M.+Dahlqvistauthor=A.+Petruhinsauthor=J.+Luauthor=L.+Hultmanauthor=J.+Rosen&title=The+Origin+of+Chemically+Ordered+Atomic+Laminates+%28i-MAX%29%3B+Expanding+the+Elemental+Space+by+a+Theoretical%2FExperimental+Approach&doi=10.1021%2Facsnano.8b01774\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=30&publication_year=2018&pages=4031-4038&author=A.+C.+Rajanauthor=A.+Mishraauthor=S.+Satsangiauthor=R.+Vaishauthor=H.+Mizusekiauthor=K.-R.+Leeauthor=A.+K.+Singh&title=Machine-Learning+Assisted+Accurate+Band+Gap+Predictions+of+Functionalized+MXene&doi=10.1021%2Facs.chemmater.8b00686\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=13&publication_year=2019&pages=3031-3041&author=N.+C.+Freyauthor=J.+Wangauthor=G.+I.+n.+Vega+Bellidoauthor=B.+Anasoriauthor=Y.+Gogotsiauthor=V.+B.+Shenoy&title=Prediction+of+Synthesis+of+2D+Metal+Carbides+and+Nitrides+%28MXenes%29+and+their+Precursors+with+Positive+and+Unlabeled+Machine+Learning&doi=10.1021%2Facsnano.8b08014\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=5&publication_year=2017&pages=21663-21668&author=W.+Sunauthor=S.+Shahauthor=Y.+Chenauthor=Z.+Tanauthor=H.+Gaoauthor=T.+Habibauthor=M.+Radovicauthor=M.+Green&title=Electrochemical+Etching+of+Ti2AlC+to+Ti2CTx+%28MXene%29+in+Low-Concentration+Hydrochloric+Acid+Solution&doi=10.1039%2FC7TA05574A\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=141&publication_year=2019&pages=4730-4737&author=M.+Liauthor=J.+Luauthor=K.+Luoauthor=Y.+Liauthor=K.+Changauthor=K.+Chenauthor=J.+Zhouauthor=J.+Rosenauthor=L.+Hultmanauthor=P.+Eklundauthor=P.+O.+%C3%85.+Perssonauthor=S.+Duauthor=Z.+Chaiauthor=Z.+Huangauthor=Q.+Huang&title=An+Element+Replacement+Approach+by+Reaction+with+Lewis+Acidic+Molten+Salts+To+Synthesize+Nanolaminated+MAX+Phases+and+MXenes&doi=10.1021%2Fjacs.9b00574\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&publication_year=2019&pages=1902333&author=L.+Chengauthor=X.+Wangauthor=F.+Gongauthor=T.+Liuauthor=Z.+Liu&title=2D+Nanomaterials+for+Cancer+Theranostic+Applications&doi=10.1002%2Fadma.201902333\n",
+      "http://scholar.google.com/scholar_lookup?hl=en&volume=4&publication_year=2018&author=A.+Sarychevaauthor=A.+Polemiauthor=Y.+Liuauthor=K.+Dandekarauthor=B.+Anasoriauthor=Y.+Gogotsi&title=2D+Titanium+Carbide+%28MXene%29+for+Wireless+Communication&doi=10.1126%2Fsciadv.aau0920\n"
+     ]
+    }
+   ],
    "source": [
     "for link in scholarLinks:\n",
     "    print(link)"
@@ -130,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2D metal carbides and nitrides (MXenes)\n"
+     ]
+    }
+   ],
    "source": [
     "html = gettingUrl(driver.current_url)\n",
     "# print(driver.current_url)\n",
@@ -221,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
