refined the search

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,20 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B Anasori\n",
-      "ÛG Gogotsi\n"
+      "ATS Wee\n",
+      "MC Hersam\n",
+      "M Chhowalla\n"
      ]
     }
    ],
    "source": [
-    "html = gettingUrl(scholarLinks[4])\n",
+    "html = gettingUrl(scholarLinks[1])\n",
     "soup3 = BeautifulSoup(html,'lxml')  #creating an instance of the BeautifulSoup library\n",
     "content = soup3.find('div', class_=\"gs_a\")\n",
     "authors = content.find_all('a')\n",
@@ -199,14 +200,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://link.springer.com/content/pdf/10.1007/978-3-030-19026-2.pdf\n"
+      "ACS Publications\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to find the publication house name of the referenced paper from google scholar.\n",
+    "\n",
+    "name = content.text\n",
+    "# print(name)\n",
+    "\n",
+    "if \"science\" in name:\n",
+    "    print(\"science\")\n",
+    "elif 'Wiley' in name:\n",
+    "    print(\"wiley\")\n",
+    "elif 'nature' in name:\n",
+    "    print(\"nature\")\n",
+    "elif 'sciencedirect' in name:\n",
+    "    print(\"sciencedirect\")\n",
+    "elif 'Springer' in name:\n",
+    "    print(\"Springer\")\n",
+    "elif 'Elsevier' in name:\n",
+    "    print(\"Elsevier\")\n",
+    "elif 'mdpi' in name:\n",
+    "    print(\"mdpi\")\n",
+    "elif 'ACS Publications' in name:\n",
+    "    print(\"ACS Publications\")\n",
+    "elif 'ieee' in name:\n",
+    "    print(\"ieee\")\n",
+    "else:\n",
+    "    print(\"other\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://pubs.acs.org/doi/full/10.1021/acsnano.6b06087\n"
      ]
     }
    ],
@@ -218,17 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome(\"C:\\\\Users\\\\rishu\\\\chromedriver\")\n",
     "driver.get(scholarLinks[4])\n",
+    "time.sleep(5)\n",
     "# driver.find_element(By.XPATH, value='//*[@id=\"gs_res_ccl_mid\"]/div/div[2]/div[3]/a[2]').click()\n",
     "driver.find_element(By.LINK_TEXT, \"Cite\").click()\n",
     "\n",
     "\n",
-    "time.sleep(5)\n",
+    "\n",
     "# print(driver.current_url)\n",
     "# try:\n",
     "#     element = WebDriverWait(driver, 10).until(\n",
@@ -241,14 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2D metal carbides and nitrides (MXenes)\n"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'i'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\rishu\\OneDrive - IIT Kanpur\\Desktop\\Codes\\WebScrapingUgp\\Progress.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rishu/OneDrive%20-%20IIT%20Kanpur/Desktop/Codes/WebScrapingUgp/Progress.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m soup4 \u001b[39m=\u001b[39m BeautifulSoup(html, \u001b[39m'\u001b[39m\u001b[39mlxml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/rishu/OneDrive%20-%20IIT%20Kanpur/Desktop/Codes/WebScrapingUgp/Progress.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m paperName \u001b[39m=\u001b[39m soup4\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m'\u001b[39m,class_ \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mgs_citr\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/rishu/OneDrive%20-%20IIT%20Kanpur/Desktop/Codes/WebScrapingUgp/Progress.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(paperName\u001b[39m.\u001b[39;49mi\u001b[39m.\u001b[39mtext)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'i'"
      ]
     }
    ],
@@ -262,58 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['google']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url=input(\"Enter the url of the website: \")\n",
-    "name = re.findall('www\\.(.*?)\\.', url)\n",
-    "print(name)"
+    "# url=input(\"Enter the url of the website: \")\n",
+    "# name = re.findall('www\\.(.*?)\\.', url)\n",
+    "# print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "other\n"
-     ]
-    }
-   ],
-   "source": [
-    "if name == ['science']:\n",
-    "    print(\"science\")\n",
-    "elif name == ['wiley']:\n",
-    "    print(\"wiley\")\n",
-    "elif name == ['nature']:\n",
-    "    print(\"nature\")\n",
-    "elif name == ['sciencedirect']:\n",
-    "    print(\"sciencedirect\")\n",
-    "elif name == ['springer']:\n",
-    "    print(\"springer\")\n",
-    "elif name == ['elsevier']:\n",
-    "    print(\"elsevier\")\n",
-    "elif name == ['mdpi']:\n",
-    "    print(\"mdpi\")\n",
-    "else:\n",
-    "    print(\"other\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
