--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gettingUrl(url):\n",
     "\n",
-    "    driver = webdriver.Chrome(\"C:\\\\Users\\\\rishu\\\\chromedriver\")   #replace the file path by the address of chromedriver in your system\n",
+    "    driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n",
     "    driver.get(url)\n",
     "    time.sleep(5)\n",
     "    \n",
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
+     ]
+    }
+   ],
    "source": [
     "#extracting data from acs nano site\n",
     "html = gettingUrl(\"https://pubs.acs.org/doi/10.1021/acsnano.9b06394\")"
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -200,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -260,11 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30147/3514407175.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")\n"
+     ]
+    }
+   ],
    "source": [
-    "driver = webdriver.Chrome(\"C:\\\\Users\\\\rishu\\\\chromedriver\")\n",
+    "driver = webdriver.Chrome(\"/usr/bin/chromedriver\")\n",
     "driver.get(scholarLinks[4])\n",
     "time.sleep(5)\n",
     "# driver.find_element(By.XPATH, value='//*[@id=\"gs_res_ccl_mid\"]/div/div[2]/div[3]/a[2]').click()\n",
@@ -284,9 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2D metal carbides and nitrides (MXenes)\n"
+     ]
+    }
+   ],
    "source": [
     "html = gettingUrl(driver.current_url)\n",
     "# print(driver.current_url)\n",
@@ -320,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -334,12 +376,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0583c23a2589197f18883e3ee639618d340320ccc39649f7b161d96ac23f3177"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
