--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -19,13 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gettingUrl(url):\n",
     "\n",
-    "    driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n",
+    "    options = Options()\n",
+    "    options.headless=False    #setting this to true makes the browser work in the backgeround\n",
+    "    # options.add_argument(\"--headless\")\n",
+    "    options.add_argument(\"--disable-gpu\")\n",
+    "    options.add_argument('--lang=en_US')\n",
+    "    # options.add_argument(\"--window-size=1920,1200\")\n",
+    "    options.add_argument(\"--ignore-certificate-errors\")\n",
+    "    options.add_argument(\"--disable-extensions\")\n",
+    "    options.add_argument(\"--no-sandbox\")\n",
+    "    options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "    # DRIVER_PATH = \"/usr/bin/chromedriver\"\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "    driver.get(url)\n",
     "    time.sleep(5)\n",
     "    \n",
@@ -36,18 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extracting data from acs nano site\n",
     "html = gettingUrl(\"https://pubs.acs.org/doi/10.1021/acsnano.9b06394\")"
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +98,7 @@
     "#finding out the number of times the research paper number 5 is mentioned in the text.\n",
     "soup_new = BeautifulSoup(html,'lxml')  #creating an instance of the BeautifulSoup library\n",
     "a_tags = soup_new.find('div', class_=\"article_content-left ui-resizable\")\n",
+    "# print(a_tags)\n",
     "count = a_tags.find_all('a',class_=\"ref5\")\n",
     "print(len(count))\n",
     "\n",
@@ -113,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,17 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -217,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -277,50 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_30147/3514407175.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "driver = webdriver.Chrome(\"/usr/bin/chromedriver\")\n",
-    "driver.get(scholarLinks[4])\n",
-    "time.sleep(5)\n",
-    "# driver.find_element(By.XPATH, value='//*[@id=\"gs_res_ccl_mid\"]/div/div[2]/div[3]/a[2]').click()\n",
-    "driver.find_element(By.LINK_TEXT, \"Cite\").click()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(driver.current_url)\n",
-    "# try:\n",
-    "#     element = WebDriverWait(driver, 10).until(\n",
-    "#         EC.presence_of_element_located((By.CLASS_NAME, \"gs_citr\"))\n",
-    "#     )\n",
-    "#     element.click()\n",
-    "# except:\n",
-    "#         driver.quit()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_30147/3389595816.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(\"/usr/bin/chromedriver\")  #replace the file path by the address of chromedriver in your system\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -330,33 +287,25 @@
     }
    ],
    "source": [
+    "options = Options()\n",
+    "options.headless = True\n",
+    "options.add_argument(\"--window-size=1920,1200\")\n",
+    "\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "driver.get(scholarLinks[4])\n",
+    "# driver.find_element(By.XPATH, value='//*[@id=\"gs_res_ccl_mid\"]/div/div[2]/div[3]/a[2]').click()\n",
+    "driver.find_element(By.LINK_TEXT, \"Cite\").click()\n",
+    "time.sleep(5)\n",
+    "\n",
+    "# To get the name of the 5th paper\n",
     "html = gettingUrl(driver.current_url)\n",
     "# print(driver.current_url)\n",
     "soup4 = BeautifulSoup(html, 'lxml')\n",
     "paperName = soup4.find('div',class_ = 'gs_citr')\n",
-    "print(paperName.i.text)  #printing the name of the 5th paper."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# url=input(\"Enter the url of the website: \")\n",
-    "# name = re.findall('www\\.(.*?)\\.', url)\n",
-    "# print(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # finding out the publication house link of the paper from google scholar.\n",
-    "# paperLink = soup4.find('h3',class_ = 'gs_rt')\n",
-    "# print(paperLink.a['href'])"
+    "print(paperName.i.text)  #printing the name of the 5th paper.\n",
+    "\n",
+    "driver.quit()            #quits the whole browser session along with all the associated browser windows, tabs and pop-ups.\n",
+    "\n"
    ]
   }
  ],
