--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "import time\n",
-    "import re"
+    "from random import randint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
     "    # DRIVER_PATH = \"/usr/bin/chromedriver\"\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "    driver.get(url)\n",
-    "    # driver.get_screenshot_as_file(\"screenshot1.png\")\n",
-    "    time.sleep(5)\n",
+    "    driver.get_screenshot_as_file(\"screenshot1.png\")\n",
+    "    time.sleep(randint(5,15))\n",
     "    \n",
     "    html = driver.page_source\n",
     "    #this renders the JS code and stores all of this information in static HTMl code.\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,15 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ATS Wee\n",
-      "MC Hersam\n",
       "M Chhowalla\n"
      ]
     }
@@ -214,13 +212,12 @@
     "content = soup3.find('div', class_=\"gs_a\")\n",
     "authors = content.find_all('a')\n",
     "# print(authors)\n",
-    "for author in authors:\n",
-    "    print(author.text)"
+    "print(authors[-1].text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +289,8 @@
     }
    ],
    "source": [
+    "#finding out the name of the research paper by extracting the text from the google scholar page.\n",
+    "\n",
     "options = Options()\n",
     "options.headless=True\n",
     "options.add_argument(\"--proxy-server='direct://'\")\n",
@@ -310,7 +309,7 @@
     "driver.get(scholarLinks[4])\n",
     "# driver.find_element(By.XPATH, value='//*[@id=\"gs_res_ccl_mid\"]/div/div[2]/div[3]/a[2]').click()\n",
     "driver.find_element(By.LINK_TEXT, \"Cite\").click()\n",
-    "time.sleep(5)\n",
+    "time.sleep(randint(5,15))\n",
     "\n",
     "# To get the name of the 5th paper\n",
     "html = gettingUrl(driver.current_url)\n",
@@ -340,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
