--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -767,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (main, Nov  2 2022, 18:49:29) [GCC 12.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
