Functions for various publication houses added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -133,7 +133,7 @@
     "    scholarLinks.append(link['href'])\n",
     "for link in scholarLinks:\n",
     "    index = scholarLinks.index(link)\n",
-    "    print(index+1, link)"
+    "    print(index+1, link)\n"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "\n",
     "        # getting the name of the professor to then set up further relationships.\n",
     "        print(authors[-1].text)\n",
-    "        authors_new.append(authors[-1].text)"
+    "        authors_new.append(authors[-1].text)\n"
    ]
   },
   {
@@ -684,30 +684,31 @@
     }
    ],
    "source": [
-    "#extraction from \"IEEE\" publication house.\n",
-    "html = gettingUrl(\"https://ieeexplore.ieee.org/document/9837920/references#references\")\n",
+    "# extraction from \"IEEE\" publication house.\n",
+    "html = gettingUrl(\n",
+    "    \"https://ieeexplore.ieee.org/document/9837920/references#references\")\n",
     "paperLinksgoogleScholarIEEE = []\n",
     "paperLinksgoogleScholarIEEEfinal = []\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find_all('div', class_='reference-container')\n",
     "for tag in tags:\n",
-    "    link = tag.find('a',class_=\"stats-reference-link-googleScholar\")\n",
+    "    link = tag.find('a', class_=\"stats-reference-link-googleScholar\")\n",
     "    paperLinksgoogleScholarIEEE.append(link['href'])\n",
     "\n",
     "initial = paperLinksgoogleScholarIEEE[0]\n",
     "paperLinksgoogleScholarIEEEfinal.append(initial)\n",
-    "i=1\n",
-    "while (i<len(paperLinksgoogleScholarIEEE)):\n",
+    "i = 1\n",
+    "while (i < len(paperLinksgoogleScholarIEEE)):\n",
     "    if paperLinksgoogleScholarIEEE[i] != initial:\n",
     "        paperLinksgoogleScholarIEEEfinal.append(paperLinksgoogleScholarIEEE[i])\n",
     "    else:\n",
     "        break\n",
-    "    i+=1\n",
+    "    i += 1\n",
     "\n",
     "for link in paperLinksgoogleScholarIEEEfinal:\n",
     "    index = paperLinksgoogleScholarIEEEfinal.index(link)\n",
-    "    print(index+1, link)"
+    "    print(index+1, link)\n"
    ]
   },
   {
@@ -732,7 +733,7 @@
     }
    ],
    "source": [
-    "#extraction from \"Cambridge publishing house\" publication house.\n",
+    "# extraction from \"Cambridge publishing house\" publication house.\n",
     "html = gettingUrl(\"https://www.cambridge.org/core/journals/experimental-results/article/observing-nonuniform-nonluders-yielding-in-a-coldrolled-medium-manganese-steel-with-digital-image-correlation/1C8B6F3364BA54FC2C1D7801FCFDB85E\")\n",
     "paperlinksCambridge = []\n",
     "paperlinksgoogleScholarCambridge = []\n",
@@ -740,7 +741,7 @@
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find('div', {'id': 'references-list'})\n",
-    "links = tags.find_all('a',class_=\"ref-link\")\n",
+    "links = tags.find_all('a', class_=\"ref-link\")\n",
     "for link in links:\n",
     "    paperlinksCambridge.append(link['href'])\n",
     "for link in paperlinksCambridge:\n",
