--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -515,7 +515,7 @@
     "    Authors = togetdeets[0]         # returns authors in the form of a string. \n",
     "    Authors_new = Authors.split(',') # converting to a list\n",
     "\n",
-    "    Titles.append(togetdeets[1])\n",
+    "    Titles.append(togetdeets[1])  # gets the title of the references\n",
     "\n",
     "    if Authors_new[-1] == ' et al':\n",
     "        print(Authors_new[-2])\n",
