science publication function added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,21 +415,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[60], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mint\u001b[39m(refNumber)\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m---> 16\u001b[0m     tag \u001b[39m=\u001b[39m soup\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mdd\u001b[39m\u001b[39m'\u001b[39m, {\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39msref\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mstr\u001b[39;49m(i)})\n\u001b[1;32m     17\u001b[0m     \u001b[39mprint\u001b[39m(tag)\n\u001b[1;32m     22\u001b[0m \u001b[39m# for i in range(1,int(refNumber)+1):\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39m#     tag = soup.find('dd', {'id':'sref'+str(i)})\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[39m#     print(tag)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39m# for tag in tags:\u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[39m#     Titles.append(((tag.find(\"div\", class_=\"contribution\")).find('strong',class_='title')).text)\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extraction from \"Elsevier(sciencedirect)\" publication house.\n",
     "# html = gettingUrl(\"https://www.sciencedirect.com/science/article/pii/S2376060522000608\")\n",
@@ -498,26 +486,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors', 'Next Column for Authors']\n"
+     ]
+    }
+   ],
    "source": [
     "# extraction from \"Science\" publication house.\n",
-    "html = gettingUrl(\"https://science.sciencemag.org/content/371/6534/eaay9982\")\n",
+    "# html = gettingUrl(\"https://www.science.org/doi/10.1126/sciadv.abq2104\")\n",
     "paperLinksgoogleScholarScienceall = []\n",
     "paperLinksgoogleScholarScience = []\n",
+    "scienceDOI = []\n",
+    "toGetDeets = []\n",
+    "allLastAuthors_science = []\n",
+    "journalName = []\n",
+    "Titles = []\n",
+    "yearPublication = []\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find('section', {'id': 'bibliography'})\n",
-    "links = tags.find_all('a')\n",
-    "for link in links:\n",
-    "    paperLinksgoogleScholarScienceall.append(link['href'])\n",
+    "forLabels = tags.find_all(\"div\", class_='label')\n",
     "\n",
-    "for link in paperLinksgoogleScholarScienceall:\n",
-    "    if \"scholar\" in link:\n",
-    "        paperLinksgoogleScholarScience.append(link)\n",
-    "        index = paperLinksgoogleScholarScience.index(link)\n",
-    "        print(index+1, link)\n"
+    "refNumber = len(forLabels)\n",
+    "\n",
+    "i=0\n",
+    "\n",
+    "content = tags.find_all('div', class_= \"citation\")\n",
+    "for con in content:\n",
+    "    toGetDeets.append(con.find('div', class_='citation-content'))\n",
+    "\n",
+    "for deet in toGetDeets:\n",
+    "    if deet.find('em') == None:\n",
+    "        journalName.append(\"No Data Found\")\n",
+    "    else:\n",
+    "        journalName.append(deet.find('em').text)\n",
+    "\n",
+    "for deet in toGetDeets:\n",
+    "    detail = deet.text.split(',')\n",
+    "    if ('(' in detail[-1]) == False:\n",
+    "        yearPublication.append(\"No Data Found\")\n",
+    "    else:\n",
+    "        yearPublication.append(detail[-1].split('(')[-1].split(')')[0])\n",
+    "\n",
+    "for deet in toGetDeets:\n",
+    "    Titles.append(deet.text)\n",
+    "\n",
+    "for con in content:\n",
+    "    link = con.find('a')\n",
+    "    if link.text == \"Crossref\":\n",
+    "        scienceDOI.append(link['href'])\n",
+    "    else:\n",
+    "        scienceDOI.append(\"No DOI\")\n",
+    "\n",
+    "for con in content:\n",
+    "    link = con.find_all('a')\n",
+    "    if (link[-1].text == \"Google Scholar\"):\n",
+    "        paperLinksgoogleScholarScience.append(link[-1]['href'])\n",
+    "    else:\n",
+    "        paperLinksgoogleScholarScience.append(\"Google Scholar Link Not Found\")\n",
+    "\n",
+    "for i in range(0,refNumber):\n",
+    "    allLastAuthors_science.append(\"Next Column for Authors\")"
    ]
   },
   {
@@ -592,15 +627,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"https://link.springer.com/article/10.1007/s43673-022-00064-1\"\n",
-    "str = string.split('.')\n",
+    "string = \"https://www.science.org/doi/10.1126/science.1114655\"\n",
+    "string = \"https://www.sciencedirect.com/science/article/pii/S2376060522000608\"\n",
+    "string_main = string.split('.')\n",
     "\n",
-    "if \"springer\" in str:\n",
+    "if \"sciencedirect\" in string_main:\n",
     "    print(\"yes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for i in range(1,5):\n",
+    "    print(type('REF'+\"{}\".format(i)))"
    ]
   }
  ],
@@ -620,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
