MDPI function added

--- a/Progress.ipynb
+++ b/Progress.ipynb
@@ -473,15 +473,64 @@
    "source": [
     "# extraction from \"MDPI\" publication house.\n",
     "paperLinksgoogleScholarMDPI = []\n",
-    "html = gettingUrl(\"https://www.mdpi.com/2226-4310/9/11/704/htm\")\n",
+    "toGetDeets=[]\n",
+    "Titles=[]\n",
+    "mdpiDOI = []\n",
+    "allLastAuthors_mdpi = []\n",
+    "journalName = []\n",
+    "yearPublication = []\n",
+    "# html = gettingUrl(\"https://www.mdpi.com/2226-4310/9/11/704/htm\")\n",
     "# creating an instance of the BeautifulSoup library\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "tags = soup.find('ol', class_=\"html-xx\")\n",
-    "links = tags.find_all('a', class_=\"google-scholar\")\n",
-    "for link in links:\n",
-    "    paperLinksgoogleScholarMDPI.append(link['href'])\n",
-    "    index = links.index(link)\n",
-    "    print(index+1, link['href'])\n"
+    "\n",
+    "refNumber = len(tags)\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "for i in range(1, int(refNumber)+1):\n",
+    "    content = tags.find('li', {'data-content': \"{}\".format(i)+'.'})\n",
+    "\n",
+    "    forName = content.find('span', class_=\"html-italic\")\n",
+    "\n",
+    "    if forName == None:\n",
+    "        journalName.append(\"No Data Found\")\n",
+    "    else:\n",
+    "        journalName.append(forName.text)\n",
+    "\n",
+    "    forYear = content.find('b')\n",
+    "    \n",
+    "    if forYear == None:\n",
+    "        yearPublication.append(\"No Data Found\")\n",
+    "    else:\n",
+    "        yearPublication.append(forYear.text)\n",
+    "\n",
+    "    toGetDeets.append(content.text.split('[')[0])\n",
+    "\n",
+    "    if \"CrossRef\" in content.text:\n",
+    "        mdpiDOI.append(content.find('a',class_='cross-ref')['href'])\n",
+    "    else:\n",
+    "        mdpiDOI.append(\"DOI not found\")\n",
+    "\n",
+    "    if \"Google Scholar\" in content.text:\n",
+    "        paperLinksgoogleScholarMDPI.append(content.find('a',class_='google-scholar')['href'])\n",
+    "    else:\n",
+    "        paperLinksgoogleScholarMDPI.append(\"Google Scholar Link not found\")\n",
+    "\n",
+    "for deet in toGetDeets:\n",
+    "    detail = deet.split(';')[-1]\n",
+    "    allLastAuthors_mdpi.append(detail.split('.')[0])\n",
+    "    Titles.append(detail.split('.')[:-2])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# links = tags.find_all('a', class_=\"google-scholar\")\n",
+    "# for link in links:\n",
+    "#     paperLinksgoogleScholarMDPI.append(link['href'])\n",
+    "#     index = links.index(link)\n",
+    "#     print(index+1, link['href'])\n"
    ]
   },
   {
@@ -640,7 +689,7 @@
    "source": [
     "i = 1\n",
     "for i in range(1,5):\n",
-    "    print(type('REF'+\"{}\".format(i)))"
+    "    print(\"{}\".format(i)+'.')"
    ]
   }
  ],
